<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding_horizontal"
    android:paddingTop="@dimen/padding_vertical"
    android:paddingEnd="@dimen/padding_horizontal"
    android:paddingBottom="@dimen/padding_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_larger"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="@dimen/size_bigest"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_text_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/day"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_smaller" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/size_bigest"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_text_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/night"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_smaller" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/size_bigest"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/humidity"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_smaller" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/size_bigest"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_wind_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_wind_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_smaller" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</HorizontalScrollView>